# backend

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  Makefile  PRD.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  frut-erd.md  makemigrations_all.sh  nginx.conf  pyproject.toml
benefits/: models.py  urls.py
common/: mixins.py  models.py  response.py  storage.py  urls.py
config/: custom_logging.py  settings.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
operations/: models.py  urls.py
orders/: admin.py  models.py  urls.py
products/: admin.py  models.py  urls.py
reviews/: models.py  urls.py
sellers/: admin.py  models.py  serializers.py  urls.py  views.py
settlements/: models.py  urls.py
shopping/: models.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
